add navigation to kenimatics formula pages

--- a/views/index.html
+++ b/views/index.html
@@ -12,5 +12,5 @@
     <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
     <button id="dynamics-button" name="dynamics">Dynamics</button>
 </body>
-<script src="/static/script.js"></script>
+<script src="/static/scripts/unit_buttons.js"></script>
 </html>
