--- a/views/units/kenimatics/index.html
+++ b/views/units/kenimatics/index.html
@@ -7,6 +7,13 @@
     <title>Kenimatics</title>
 </head>
 <body>
-    <h1>This is the Kenimatics unit</h1>
+    <h1>Kenimatics</h1>
+    <p>Calculators</p>
+    <button id="velocity-2-button">Final Velocity</button>
+    <button id="velocity-1-button">Initial Velocity</button>
+    <button id="time-button">Time</button>
+    <button id="displacement">Displacement</button>
+    <button id="acceleration">Acceleration</button>
 </body>
+<script src="../../static/scripts/kenimatics_buttons.js"></script>
 </html>
