add kenimatics calculator page

--- a/views/units/kenimatics/displacement.html
+++ b/views/units/kenimatics/displacement.html
@@ -7,6 +7,11 @@
     <title>Displacement</title>
 </head>
 <body>
-    
+    <h1>Displacement</h1>
+    <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+    <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
+    <input type="text" placeholder="Time" id="time-input"><br>
+    <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
+    <button id="calculate-button">Calculate</button>
 </body>
 </html>
