--- a/views/units/kenimatics/index.html
+++ b/views/units/kenimatics/index.html
@@ -15,5 +15,5 @@
     <button id="displacement">Displacement</button>
     <button id="acceleration">Acceleration</button>
 </body>
-<script src="../../static/scripts/kenimatics_buttons.js"></script>
+<script src="/static/scripts/kenimatics/kenimatics_buttons.js"></script>
 </html>
