--- a/views/units/kenimatics/velocity2.html
+++ b/views/units/kenimatics/velocity2.html
@@ -8,5 +8,11 @@
 </head>
 <body>
     <h1>Final Velocity</h1>
+    <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+    <input type="text" placeholder="Time" id="time-input"><br>
+    <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
+    <input type="text" placeholder="Displacement" id="displacement-input"><br>
+    <button id="calculate-button">Calculate</button>
 </body>
+<script src="../../static/scripts/kenimatics/kenimatics_formula.js"></script>
 </html>
