--- a/views/units/kenimatics/time.html
+++ b/views/units/kenimatics/time.html
@@ -7,6 +7,11 @@
     <title>Time</title>
 </head>
 <body>
-    
+    <h1>Time</h1>
+    <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+    <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
+    <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
+    <input type="text" placeholder="Displacement" id="displacement-input"><br>
+    <button id="calculate-button">Calculate</button>
 </body>
 </html>
