add nav bar to main pages

--- a/views/units/dynamics/index.html
+++ b/views/units/dynamics/index.html
@@ -4,9 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/global_uniform.css">
+    <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
     <title>Dynamics</title>
 </head>
 <body>
+    <ul>
+        <li><a href="/" id="page-title-nav">Physics Calculator</a></li>
+        <li><a href="/units/kenimatics" class="nav-items">Kenimatics</a></li>
+        <li><a href="/units/dynamics" class="nav-items">Dynamics</a></li>
+        <li style="float:right"><a class="nav-items" href="#">GitHub</a></li>
+    </ul>
     <h1>This is the Dynamics unit</h1>
 </body>
 </html>
