--- a/views/index.html
+++ b/views/index.html
@@ -4,10 +4,18 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
+    <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <title>Physics Calculator</title>
 </head>
 <body>
-    <h1>Physics Calculator</h1>
+    <ul>
+        <li><a href="/" id="page-title-nav">Physics Calculator</a></li>
+        <li><a href="/units/kenimatics" class="nav-items">Kenimatics</a></li>
+        <li><a href="/units/dynamics" class="nav-items">Dynamics</a></li>
+        <li style="float:right"><a class="nav-items" href="#">GitHub</a></li>
+    </ul>
+    
     <p>Welcome to the physics calculator</p>
     <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
     <button id="dynamics-button" name="dynamics">Dynamics</button>
