--- a/views/units/dynamics/index.html
+++ b/views/units/dynamics/index.html
@@ -15,6 +15,12 @@
         <li><a href="/units/dynamics" class="nav-items">Dynamics</a></li>
         <li style="float:right"><a class="nav-items" href="#">GitHub</a></li>
     </ul>
-    <h1>This is the Dynamics unit</h1>
+    <div id="page-title">
+        <p>Dynamics</p> 
+    </div>
+    <div id="unit-select-button">
+        <button id="velocity-2-button">Dummy</button>
+        <button id="velocity-1-button">Buttons</button>
+    </div>
 </body>
 </html>
