add uniform nav bar for all pages

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -9,9 +9,9 @@
     <title>Physics Calculator</title>
 </head>
 <body>
-    <%- include('nav_bar') %>
+    <%- include('nav_bar.ejs') %>
     <div id="page-title">
-       <p>Welcome to the Physics Calculator</p> 
+       <p>Welcome to the Physics Calculator</p>
     </div>
     <div id="unit-select-button">
         <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
