--- a/views/units/dynamics/index.ejs
+++ b/views/units/dynamics/index.ejs
@@ -9,12 +9,7 @@
     <title>Dynamics</title>
 </head>
 <body>
-    <ul>
-        <li><a href="/" id="page-title-nav">Physics Calculator</a></li>
-        <li><a href="/units/kenimatics" class="nav-items">Kenimatics</a></li>
-        <li><a href="/units/dynamics" class="nav-items">Dynamics</a></li>
-        <li style="float:right"><a class="nav-items" href="#">GitHub</a></li>
-    </ul>
+    <%- include('../../nav_bar.ejs') %>
     <div id="page-title">
         <p>Dynamics</p> 
     </div>
