--- a/views/units/kenimatics/velocity1.ejs
+++ b/views/units/kenimatics/velocity1.ejs
@@ -4,10 +4,15 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
+    <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <title>Initial Velocity</title>
 </head>
 <body>
-    <h1>Initial Velocity</h1>
+    <%- include('../../nav_bar.ejs') %>
+    <div id="page-title">
+        <p>Initial Velocity</p>
+    </div>
     <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
     <input type="text" placeholder="Time" id="time-input"><br>
     <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
