--- a/static/styles/global_uniform.css
+++ b/static/styles/global_uniform.css
@@ -27,3 +27,23 @@ body {
     margin: 20px;
     font-size: 50px;
 }
+
+#variable-inputs input, #variable-inputs button {
+    background-color: rgb(151, 151, 151);
+    margin: 20px;
+    padding: 10px;
+    border-radius: 3px;
+}
+
+#variable-inputs input:hover {
+    background-color: rgb(128, 128, 128);
+}
+
+#variable-inputs button:hover {
+    background-color: rgb(36, 36, 36);
+}
+
+#variable-inputs input::placeholder {
+    color: white;
+}
+
