--- a/views/units/kenimatics/time.ejs
+++ b/views/units/kenimatics/time.ejs
@@ -13,10 +13,12 @@
     <div id="page-title">
         <p>Time</p> 
     </div>
-    <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
-    <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
-    <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
-    <input type="text" placeholder="Displacement" id="displacement-input"><br>
-    <button id="calculate-button">Calculate</button>
+    <div id="variable-inputs">
+        <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+        <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
+        <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
+        <input type="text" placeholder="Displacement" id="displacement-input"><br>
+        <button id="calculate-button">Calculate</button>
+    </div>
 </body>
 </html>
