--- a/views/units/kenimatics/velocity2.ejs
+++ b/views/units/kenimatics/velocity2.ejs
@@ -13,11 +13,13 @@
     <div id="page-title">
         <p>Final Velocity</p>
     </div>
-    <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
-    <input type="text" placeholder="Time" id="time-input"><br>
-    <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
-    <input type="text" placeholder="Displacement" id="displacement-input"><br>
-    <button id="calculate-button">Calculate</button>
+    <div id="variable-inputs">
+        <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+        <input type="text" placeholder="Time" id="time-input"><br>
+        <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
+        <input type="text" placeholder="Displacement" id="displacement-input"><br>
+        <button id="calculate-button">Calculate</button>
+    </div>
 </body>
 <script src="../../static/scripts/kenimatics/kenimatics_formula.js"></script>
 </html>
