fix styles for displacement

--- a/static/styles/global_uniform.css
+++ b/static/styles/global_uniform.css
@@ -8,9 +8,11 @@
     color: white;
     font-family: Arial, Helvetica, sans-serif;
 }
+
 body {
     background-color: rgb(70, 70, 70);
 }
+
 #unit-select-button button {
     background-color: rgb(151, 151, 151);
     border-radius: 2px;
@@ -28,11 +30,31 @@ body {
     font-size: 50px;
 }
 
+
+#variable-inputs {
+    display: inline;
+    width: 40%;
+}
+
 #variable-inputs input, #variable-inputs button {
-    background-color: rgb(151, 151, 151);
     margin: 20px;
     padding: 10px;
     border-radius: 3px;
+    width: 25%;
+}
+
+#variable-inputs input {
+    background-color: rgb(151, 151, 151);
+}
+
+#variable-inputs button {
+    background-color: rgb(36, 36, 36);
+    height: 70px;
+}
+
+#variable-inputs {
+    width: 50%;
+    display: inline;
 }
 
 #variable-inputs input:hover {
@@ -40,10 +62,23 @@ body {
 }
 
 #variable-inputs button:hover {
-    background-color: rgb(36, 36, 36);
+    background-color: rgb(128, 128, 128);
 }
 
 #variable-inputs input::placeholder {
     color: white;
 }
 
+#answer-container {
+    margin: 20px;
+    font-size: 25px;
+    width: 50%;
+    padding: 20px
+}
+
+#formula-img {
+    width: 25%;
+    float: right;
+    display: inline;
+    margin: 20px 200px;
+}
