--- a/views/units/kenimatics/displacement.ejs
+++ b/views/units/kenimatics/displacement.ejs
@@ -11,8 +11,9 @@
 <body>
     <%- include('../../nav_bar.ejs') %>
     <div id="page-title">
-        <p>Displacement</p> 
+        <p>Displacement</p>
     </div>
+    <img id="formula-img" alt="not available" src="../../static/images/cola.png">
     <div id="variable-inputs">
         <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
         <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
@@ -20,5 +21,9 @@
         <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
         <button id="calculate-button">Calculate</button>
     </div>
+    <div id="answer-container">
+        <p id="answer">ANSWER: </p>
+    </div>
 </body>
+<script src="../../static/scripts/kenimatics/d_formula.js"></script>
 </html>
