add formula images for displacement

--- a/views/units/kenimatics/displacement.ejs
+++ b/views/units/kenimatics/displacement.ejs
@@ -13,7 +13,7 @@
     <div id="page-title">
         <p>Displacement</p>
     </div>
-    <img id="formula-img" alt="not available" src="../../static/images/cola.png">
+    <img id="formula-img" src="">
     <div id="variable-inputs">
         <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
         <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
