--- a/views/units/kenimatics/velocity1.ejs
+++ b/views/units/kenimatics/velocity1.ejs
@@ -13,6 +13,7 @@
     <div id="page-title">
         <p>Initial Velocity</p>
     </div>
+    <img id="formula-img" src="">
     <div id="variable-inputs">
         <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
         <input type="text" placeholder="Time" id="time-input"><br>
@@ -20,5 +21,9 @@
         <input type="text" placeholder="Displacement" id="displacement-input"><br>
         <button id="calculate-button">Calculate</button>
     </div>
+    <div id="answer-container">
+        <p id="answer">ANSWER: </p>
+    </div>
 </body>
+<script src="../../static/scripts/kenimatics/v1_formula.js"></script>
 </html>
