--- a/views/units/kenimatics/time.ejs
+++ b/views/units/kenimatics/time.ejs
@@ -11,14 +11,19 @@
 <body>
     <%- include('../../nav_bar.ejs') %>
     <div id="page-title">
-        <p>Time</p> 
+        <p>Time</p>
     </div>
+    <img id="formula-img" src="">
     <div id="variable-inputs">
         <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
         <input type="text" placeholder="Final Velocity" id="velocity2-input"><br>
-        <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
         <input type="text" placeholder="Displacement" id="displacement-input"><br>
+        <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
         <button id="calculate-button">Calculate</button>
     </div>
+    <div id="answer-container">
+        <p id="answer">ANSWER: </p>
+    </div>
 </body>
+<script src="../../static/scripts/kenimatics/t_formula.js"></script>
 </html>
