--- a/views/units/kenimatics/velocity2.ejs
+++ b/views/units/kenimatics/velocity2.ejs
@@ -13,13 +13,17 @@
     <div id="page-title">
         <p>Final Velocity</p>
     </div>
+    <img id="formula-img" src="">
     <div id="variable-inputs">
         <input type="text" placeholder="Initial Velocity" id="velocity1-input"><br>
+        <input type="text" placeholder="Displacement" id="displacement-input"><br>
         <input type="text" placeholder="Time" id="time-input"><br>
         <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
-        <input type="text" placeholder="Displacement" id="displacement-input"><br>
         <button id="calculate-button">Calculate</button>
     </div>
+    <div id="answer-container">
+        <p id="answer">ANSWER: </p>
+    </div>
 </body>
-<script src="../../static/scripts/kenimatics/kenimatics_formula.js"></script>
+<script src="../../static/scripts/kenimatics/v2_formula.js"></script>
 </html>
