add dividers for the formula buttons

--- a/views/units/dynamics/index.ejs
+++ b/views/units/dynamics/index.ejs
@@ -14,8 +14,19 @@
         <p>Dynamics</p> 
     </div>
     <div id="unit-select-button">
-        <button id="velocity-2-button">Dummy</button>
-        <button id="velocity-1-button">Buttons</button>
+        <p>Newton's Second Law</p>
+        <button id="force-button">Force</button>
+        <button id="mass-button">Mass</button>
+        <button id="acceleration-button">Acceleration</button>
+        <p>Kinetic and Static Friction</p>
+        <button id="force-normal-button">Force Normal</button>
+        <button id="force-friction-button">Force Friction</button>
+        <button id="friction-coefficient-button">Friction Coefficient</button>
+        <p>Universal Gravitation</p>
+        <button id="gravity-button">Gravity</button>
+        <button id="radius-button">Radius</button>
+        <button id="mass-1-button">Mass One</button>
+        <button id="mass-2-button">Mass Two</button>
     </div>
 </body>
 </html>
