--- a/views/units/kenimatics/index.ejs
+++ b/views/units/kenimatics/index.ejs
@@ -14,6 +14,7 @@
         <p>Kenimatics</p> 
     </div>
     <div id="unit-select-button">
+        <p>Motion Equations</p>
         <button id="velocity-2-button">Final Velocity</button>
         <button id="velocity-1-button">Initial Velocity</button>
         <button id="time-button">Time</button>
