add styles for new button dividers

--- a/static/styles/global_uniform.css
+++ b/static/styles/global_uniform.css
@@ -83,3 +83,9 @@ body {
     margin: 20px 200px;
     filter: invert(1);
 }
+
+#unit-select-button p {
+    padding: 20px;
+    font-size: 25px;
+    background-color: grey;
+}
