add dynamics views for  main page and mass

--- a/views/units/dynamics/index.ejs
+++ b/views/units/dynamics/index.ejs
@@ -29,4 +29,5 @@
         <button id="mass-2-button">Mass Two</button>
     </div>
 </body>
+<script src="../../../static/scripts/dynamics/dynamics_buttons.js"></script>
 </html>
