add formulas for newtons second law

--- a/views/units/dynamics/force.ejs
+++ b/views/units/dynamics/force.ejs
@@ -6,16 +6,16 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
-    <title>Mass</title>
+    <title>Force</title>
 </head>
 <body>
     <%- include('../../nav_bar.ejs') %>
     <div id="page-title">
-        <p>Mass</p> 
+        <p>Force</p> 
     </div>
     <img id="formula-img" src="">
     <div id="variable-inputs">
-        <input type="text" placeholder="Force" id="force-input"><br>
+        <input type="text" placeholder="Mass" id="mass-input"><br>
         <input type="text" placeholder="Acceleration" id="acceleration-input"><br>
         <button id="calculate-button">Calculate</button>
     </div>
@@ -23,5 +23,5 @@
         <p id="answer">ANSWER: </p>
     </div>
 </body>
-<script src="../../static/scripts/dynamics/m_formula.js"></script>
+<script src="../../static/scripts/dynamics/f_formula.js"></script>
 </html>
