fix dividers for button section

--- a/views/units/dynamics/index.ejs
+++ b/views/units/dynamics/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
+    <link rel="stylesheet" href="/static/styles/selection_pages.css">
     <title>Dynamics</title>
 </head>
 <body>
@@ -14,15 +15,21 @@
         <p>Dynamics</p> 
     </div>
     <div id="unit-select-button">
-        <p>Newton's Second Law</p>
+        <div class="button-separate">
+            <p>Newton's Second Law</p>
+        </div>
         <button id="force-button">Force</button>
         <button id="mass-button">Mass</button>
         <button id="acceleration-button">Acceleration</button>
-        <p>Kinetic and Static Friction</p>
+        <div class="button-separate">
+            <p>Kinetic and Static Friction</p>
+        </div>
         <button id="force-normal-button">Force Normal</button>
         <button id="force-friction-button">Force Friction</button>
         <button id="friction-coefficient-button">Friction Coefficient</button>
-        <p>Universal Gravitation</p>
+        <div class="button-separate">
+            <p>Universal Gravitation</p>
+        </div>
         <button id="gravity-button">Gravity</button>
         <button id="radius-button">Radius</button>
         <button id="mass-1-button">Mass One</button>
