--- a/views/units/kenimatics/index.ejs
+++ b/views/units/kenimatics/index.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
+    <link rel="stylesheet" href="/static/styles/selection_pages.css">
     <title>Kenimatics</title>
 </head>
 <body>
@@ -14,7 +15,9 @@
         <p>Kenimatics</p> 
     </div>
     <div id="unit-select-button">
-        <p>Motion Equations</p>
+        <div class="button-separate">
+            <p>Motion Equations</p>
+        </div>
         <button id="velocity-2-button">Final Velocity</button>
         <button id="velocity-1-button">Initial Velocity</button>
         <button id="time-button">Time</button>
