--- a/static/styles/global_uniform.css
+++ b/static/styles/global_uniform.css
@@ -19,10 +19,11 @@ body {
     padding: 50px;
     margin: 20px;
     font-size: 25px;
+    transition: 0.3s;
 }
 
 #unit-select-button button:hover{
-    background-color: #111; 
+    background-color: #111;
 }
 
 #page-title p {
@@ -50,6 +51,7 @@ body {
 #variable-inputs button {
     background-color: rgb(36, 36, 36);
     height: 70px;
+    transition: 0.2s;
 }
 
 #variable-inputs {
@@ -84,8 +86,21 @@ body {
     filter: invert(1);
 }
 
-#unit-select-button p {
-    padding: 20px;
-    font-size: 25px;
-    background-color: grey;
+::-webkit-scrollbar {
+    width: 15px;
+}
+
+::-webkit-scrollbar-track {
+    background: grey;
+    border-radius: 50rem;
+}
+
+::-webkit-scrollbar-thumb {
+    background: black;
+    border-radius: 50px;
+    border: 1px solid grey;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background: darkgray;
 }
