--- a/static/styles/selection_pages.css
+++ b/static/styles/selection_pages.css
@@ -4,3 +4,16 @@
     font-size: 25px;
     border-bottom: 2px solid white;
 }
+
+#unit-select-button button {
+    background-color: rgb(151, 151, 151);
+    border-radius: 2px;
+    padding: 50px;
+    margin: 20px;
+    font-size: 25px;
+    transition: 0.3s;
+}
+
+#unit-select-button button:hover{
+    background-color: #111;
+}
