--- a/views/units/dynamics/force_friction.ejs
+++ b/views/units/dynamics/force_friction.ejs
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
+    <link rel="stylesheet" href="/static/styles/calculator_styles.css">
     <title>Force Friction</title>
 </head>
 <body>
