update minor css styling

--- a/static/styles/selection_pages.css
+++ b/static/styles/selection_pages.css
@@ -7,8 +7,9 @@
 
 #unit-select-button button {
     background-color: rgb(151, 151, 151);
-    border-radius: 2px;
-    padding: 50px;
+    width: 25%;
+    border-radius: 15px;
+    padding: 40px;
     margin: 20px;
     font-size: 25px;
     transition: 0.3s;
