--- a/views/index.ejs
+++ b/views/index.ejs
@@ -14,6 +14,9 @@
     <div id="page-title">
        <p>Welcome to the Physics Calculator</p>
     </div>
+    <div class="button-separate">
+        <p>Unit Selection</p>
+    </div>
     <div id="unit-select-button">
         <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
         <button id="dynamics-button" name="dynamics">Dynamics</button>
