add favicon to all pages

--- a/views/units/kenimatics/velocity2.ejs
+++ b/views/units/kenimatics/velocity2.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <link rel="stylesheet" href="/static/styles/calculator_styles.css">
+    <link rel="icon" href="/static/icons/home_tab_icon.png">
     <title>Final Velocity</title>
 </head>
 <body>
