--- a/views/units/dynamics/index.ejs
+++ b/views/units/dynamics/index.ejs
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="/static/styles/global_uniform.css">
     <link rel="stylesheet" href="/static/styles/nav_bar_styles.css">
     <link rel="stylesheet" href="/static/styles/selection_pages.css">
+    <link rel="icon" href="/static/icons/home_tab_icon.png">
     <title>Dynamics</title>
 </head>
 <body>
