--- a/views/index.ejs
+++ b/views/index.ejs
@@ -16,11 +16,17 @@
        <p>Welcome to the Physics Calculator</p>
     </div>
     <div class="button-separate">
-        <p>Unit Selection</p>
+        <p>Branch Selection</p>
     </div>
     <div id="unit-select-button">
         <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
         <button id="dynamics-button" name="dynamics">Dynamics</button>
+    </div>
+    <div class="button-separate">
+        <p>Other Tools</p>
+    </div>
+    <div id="other-select-button">
+        <button id="unit-conversion-button" name="kenimatics">Unit Conversion</button>
     </div>
 </body>
 <script src="/static/scripts/unit_buttons.js"></script>
