add unit conversion page

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -26,8 +26,9 @@
         <p>Other Tools</p>
     </div>
     <div id="other-select-button">
-        <button id="unit-conversion-button" name="kenimatics">Unit Conversion</button>
+        <button id="unit-conversion-button" name="unit conversion">Unit Conversion</button>
     </div>
 </body>
 <script src="/static/scripts/unit_buttons.js"></script>
+<script src="/static/scripts/other/tool_buttons.js"></script>
 </html>
