add energy unit work calculators

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -21,6 +21,7 @@
     <div id="unit-select-button">
         <button id="kenimatics-button" name="kenimatics">Kenimatics</button>
         <button id="dynamics-button" name="dynamics">Dynamics</button>
+        <button id="energy-button" name="energy">Energy</button>
     </div>
     <div class="button-separate">
         <p>Other Tools</p>
