add new nav bar items

--- a/views/nav_bar.ejs
+++ b/views/nav_bar.ejs
@@ -2,5 +2,7 @@
     <li><a href="/" id="page-title-nav">Physics Calculator</a></li>
     <li><a href="/units/kenimatics" class="nav-items">Kenimatics</a></li>
     <li><a href="/units/dynamics" class="nav-items">Dynamics</a></li>
+    <li><a href="/units/energy" class="nav-items">Energy</a></li>
+    <li><a href="/units/unit_conversion" class="nav-items">Unit Conversion</a></li>
     <li style="float:right"><a class="nav-items" href="https://github.com/osHamad/physics-calculator">GitHub</a></li>
 </ul>
