add length si unit convertion

--- a/views/units/conversion/length.ejs
+++ b/views/units/conversion/length.ejs
@@ -37,7 +37,10 @@
         </select>
         <br>
         <button id="calculate-button">Calculate</button>
+        <div id="answer-container">
+            <p id="answer">CONVERTED: </p>
+        </div>
     </div>
 </body>
-<script src=""></script>
+<script src="../../../static/scripts/conversion/length_convert.js"></script>
 </html>
