--- a/static/styles/calculator_styles.css
+++ b/static/styles/calculator_styles.css
@@ -48,8 +48,17 @@
     filter: invert(1);
 }
 
+#formula-div {
+    width: 25%;
+    float: right;
+    display: none;
+    margin: 20px 200px;
+    line-height: 100px;
+    font-size: 30px;
+}
+
 #conversion-units-1, #conversion-units-2 {
-    background-color: black;
+    background-color: rgb(43, 43, 43);
     margin: 20px;
     margin-bottom: 100px;
     padding: 15px;
